Fixed broken layout style on Firefox.

--- a/src/documents/css/_content.scss
+++ b/src/documents/css/_content.scss
@@ -12,6 +12,8 @@ section#content-container {
 		border: 1px solid #ddd;
 		padding: 20px 25px 8px 25px;
 		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-ms-box-sizing: border-box;
 		box-sizing: border-box;
 
 		> ul {
